--- a/MainApp.html
+++ b/MainApp.html
@@ -14,5 +14,66 @@
                 <h1>Hello, World!</h1>,
                 document.getElementById('root'));
         </script>
+        
+        <p>Example 1</p>
+        <div id="hello-example"></div>
+        <script type="text/babel">
+
+            class HelloMessage extends React.Component{
+                render(){
+                    return(
+                        <div>
+                            Hola {this.props.name}
+                        </div>
+                    );
+                }
+            }
+            ReactDOM.render(
+                <HelloMessage name = "Taylor"/>,
+                document.getElementById('hello-example')
+            );
+        </script>
+
+        
+        <br>
+        <div id="timer-example"></div>
+        <script type="text/babel">
+
+            class Timer extends React.Component{
+                constructor(props){
+                    super(props);
+                    this.state = {seconds: 0};
+                }
+
+                tick(){
+                    this.setState(state => ({
+                        seconds: state.seconds + 1
+                    }));
+                }
+
+                componentDidMount(){
+                    this.interval = setInterval(() => this.tick(), 1000);
+                }
+
+                componentWillUnmount(){
+                    clearInterval(this.interval);
+                }
+
+                render(){
+                    return(
+                        <div>
+                            Segundos: {this.state.seconds}
+                        </div>
+                    );
+                }
+            }
+
+            ReactDOM.render(
+                <Timer />,
+                document.getElementById('timer-example')
+            );
+
+        </script>
+
     </body>
 </html>
