--- a/MainApp.html
+++ b/MainApp.html
@@ -15,7 +15,7 @@
                 document.getElementById('root'));
         </script>
         
-        <p>Example 1</p>
+        <p>Example: A Simple Component</p>
         <div id="hello-example"></div>
         <script type="text/babel">
 
@@ -34,8 +34,9 @@
             );
         </script>
 
-        
         <br>
+
+        <p>Example: A Stateful Component</p>
         <div id="timer-example"></div>
         <script type="text/babel">
 
@@ -75,5 +76,79 @@
 
         </script>
 
+        <br>
+
+        <p>Example: An Application</p>
+        <div id="todos-example"></div>
+        <script type="text/babel">
+
+            class TodoApp extends React.Component {
+                constructor(props) {
+                    super(props);
+                    this.state = { items: [], text: ''};
+                    this.handleChange = this.handleChange.bind(this);
+                    this.handleSubmit = this.handleSubmit.bind(this);
+                }
+
+                render() {
+                    return (
+                        <div>
+                            <h3>TODO</h3>
+                            <TodoList items={this.state.items} />
+                            <form onSubmit={this.handleSubmit}>
+                                <label htmlFor="new-todo">
+                                What need to be done?
+                                </label>
+                                <input
+                                    id="new-todo"
+                                    onChange={this.handleChange}
+                                    value={this.state.text}
+                                />
+                                <button>
+                                    Add #{this.state.items.length + 1}
+                                </button>
+                            </form>
+                        </div>
+                    );
+                }
+
+                handleChange(e) {
+                    this.setState({ text: e.target.value});
+                }
+
+                handleSubmit(e) {
+                    e.preventDefault();
+                    if (this.state.text.length === 0) {
+                        return;
+                    }
+                    const newItem = {
+                        text: this.state.text,
+                        id: Date.now()
+                    };
+                    this.setState(state => ({
+                        items: state.items.concat(newItem),
+                        text: ''
+                    }));
+                }
+            }
+
+            class TodoList extends React.Component {
+                render() {
+                    return (
+                        <ul>
+                            {this.props.items.map(item => (
+                                <li key={item.id}>{item.text}</li>
+                            ))}
+                        </ul>
+                    );
+                }
+            }
+
+            ReactDOM.render(
+                <TodoApp />,
+                document.getElementById('todos-example')
+            );
+
+        </script>
     </body>
 </html>
