--- a/NewExamples.html
+++ b/NewExamples.html
@@ -15,8 +15,6 @@
                 <h1>Hello, World!</h1>,
                 document.getElementById('root'));
         </script>
-
-
         
         <p>Example: A Simple Component</p>
         <div id="hello-example"></div>
@@ -36,6 +34,60 @@
                 <HelloMessage name = "Luis y Santiago"/>,
                 document.getElementById('hello-example')
             )
+        </script>
+
+        <p>Example: A Stateful Component</p>
+        <div id="timer-example"></div>
+        <script type="text/babel">
+
+            class Timer extends React.Component{
+                constructor(props){
+                    super(props);
+                    this.state = {hours : 0, minutes : 0, seconds : 0};
+                }
+
+                tick(){
+                    this.setState(state => ({
+                        seconds: state.seconds + 1
+                    }));
+
+                    if(this.state.seconds > 59){
+                        this.setState(state => ({
+                            minutes: state.minutes + 1,
+                            seconds: 0
+                        }));
+                    }
+
+                    if(this.state.minutes > 59){
+                        this.setState(state => ({
+                            minutes: 0,
+                            hours: state.hours + 1
+                        }));
+                    }
+                }
+                    
+                componentDidMount(){
+                    this.interval = setInterval(() => this.tick(),1000);
+                }
+
+                componentWillUnmount(){
+                    clearInterval(this.interval);
+                }
+
+                render(){
+                    return(
+                        <div>
+                            hours: {this.state.hours} minutes: {this.state.minutes} seconds: {this.state.seconds}
+                        </div>
+                    );
+                }
+            }
+
+            ReactDOM.render(
+                <Timer />,
+                document.getElementById('timer-example')
+            );
+
         </script>
     </body>
 </html>
