--- a/NewExamples.html
+++ b/NewExamples.html
@@ -78,7 +78,7 @@
                 render(){
                     return(
                         <div>
-                            hours: {this.state.hours} minutes: {this.state.minutes} seconds: {this.state.seconds}
+                            hours: {this.state.hours}  minutes: {this.state.minutes}  seconds: {this.state.seconds}
                         </div>
                     );
                 }
@@ -87,6 +87,61 @@
             ReactDOM.render(
                 <Timer />,
                 document.getElementById('timer-example')
+            );
+
+        </script>
+        <br>
+
+        <p>Example: A Stateful Component v.2</p>
+        <div id="timer-example2"></div>
+        <script type="text/babel">
+
+            class TimerV2 extends React.Component{
+                constructor(props){
+                    super(props);
+                    this.state = {hours : 0, minutes : 0, seconds : 0};
+                }
+
+                tick(){
+                    this.setState(state => ({
+                        seconds: state.seconds + 1
+                    }));
+
+                    if (this.state.seconds > 10) {
+                            this.setState(state => ({
+                            seconds: 0,
+                            minutes: state.minutes + 1
+                        }));
+                    }
+
+                    if (this.state.minutes > 10) {
+                            this.setState(state => ({
+                            minutes: 0,
+                            hours: state.hours + 1
+                        }));
+                    }
+                }
+
+                componentDidMount(){
+                    this.interval = setInterval(() => this.tick(),1000);
+                }
+
+                componentWillUnmount(){
+                    clearInterval(this.interval);
+                }
+
+                render(){
+                    return(
+                        <div>
+                            hours: {this.state.hours}  minutes: {this.state.minutes}  seconds: {this.state.seconds}
+                        </div>
+                    );
+                }
+            }
+
+            ReactDOM.render(
+                <TimerV2/>,
+                document.getElementById('timer-example2')
             );
 
         </script>
