Better titles of examples has been added

--- a/Example1.html
+++ b/Example1.html
@@ -16,7 +16,7 @@
                 document.getElementById('root'));
         </script>
         
-        <p>Example: A Simple Component</p>
+        <b>Example: A Simple Component</b>
         <div id="hello-example"></div>
         <script type="text/babel">
 
@@ -37,7 +37,7 @@
 
         <br>
 
-        <p>Example: A Stateful Component</p>
+        <b>Example: A Stateful Component</b>
         <div id="timer-example"></div>
         <script type="text/babel">
 
@@ -79,7 +79,7 @@
 
         <br>
 
-        <p>Example: An Application</p>
+        <b>Example: An Application</b>
         <div id="todos-example"></div>
         <script type="text/babel">
 
@@ -154,7 +154,7 @@
 
         <br>
 
-        <p>Example: A Component Using External Plugins</p>
+        <b>Example: A Component Using External Plugins</b>
         <div id="markdown-example"></div>
         <script type="text/babel">
             class MarkdownEditor extends React.Component {
