--- a/NewExamples.html
+++ b/NewExamples.html
@@ -16,7 +16,7 @@
                 document.getElementById('root'));
         </script>
         
-        <p>Example: A Simple Component</p>
+        <b>Example: A Simple Component</b>
         <div id="hello-example"></div>
         <script type="text/babel">
 
@@ -37,7 +37,7 @@
         </script>
         <br>
 
-        <p>Example: A Stateful Component</p>
+        <b>Example: A Stateful Component</b>
         <div id="timer-example"></div>
         <script type="text/babel">
 
@@ -92,7 +92,7 @@
         </script>
         <br>
 
-        <p>Example: A Stateful Component v.2</p>
+        <b>Example: A Stateful Component v.2</b>
         <div id="timer-example2"></div>
         <script type="text/babel">
 
@@ -147,7 +147,7 @@
         </script>
         <br>
 
-        <p>Example: An Application</p>
+        <b>Example: An Application</b>
         <div id="todos-example"></div>
         <script type="text/babel">
 
@@ -167,7 +167,7 @@
                             <TodoList items={this.state.items} />
                             <form onSubmit={this.handleSubmit}>
                                 <label htmlFor="new-todo">
-                                What need to be done?
+                                What need to be done?  
                                 </label>
                                 <input
                                     id="new-todo"
